Prevent overflow on parent tips (Fix #12586)

--- a/media/css/firefox/family/components/_pro-tip.scss
+++ b/media/css/firefox/family/components/_pro-tip.scss
@@ -28,6 +28,7 @@
 .c-pro-tip {
     background-color: f3.$black;
     font-weight: bold;
+    overflow-y: hidden;
 
     .mzp-l-content {
         padding-top: $spacing-md;
